welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:8: error: ')' expected but '=' found.
	if (nums[i]=value)
                   ^indexOfValue:14: error: illegal start of simple expression
}
^